# ray-on-golem

./: .env.example  .gitignore  Dockerfile  README.md  calculate_pi.py  golem-cluster-dev.yaml  golem-cluster.full.yaml  golem-cluster.mainnet.yaml  golem-cluster.mini.yaml  golem-cluster.override-goth.yaml  golem-cluster.override-smoke.yaml  golem-cluster.override.1-source-files.yaml  golem-cluster.override.2-image.yaml  golem-cluster.override.3-disable-stats.yaml  golem-cluster.override.4-capabilities.yaml  golem-cluster.override.4-subnet.yaml  golem-cluster.override.5-subnet.yaml  golem-cluster.symlink.yaml  golem-cluster.yaml  golem_ray_client.py  main.py  manifest.json  manifest.schema.json  node_provider.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_image.yml  build_publish.yml  code_tests.yml  integration_tests.yml  on_pull_request.yml  on_release.yml  on_schedule.yml  ray_deps_test.yml  smoke_tests.yml  start-goth.sh  stop-goth.sh
app/consts/: status_codes.py
app/logger/: logger.py
app/middlewares/: error_handling.py
app/models/: cluster_node.py
app/routes/: golem.py  yagna.py
app/utils/: utils.py  yagna.py
app/views/: golem.py
client/: golem_ray_client.py  node_provider.py
client/models/: request.py  response.py  types.py
examples/: GPU.Dockerfile  calculate_pi.py  dds-with-ray.py  dds-with-ray.yaml  dds-without-ray.py  dds.py  dns_tester.py  dns_tester2.py  gpu.py  gpu.yaml  gutenberg_.py  hash_cracker_ray.py  hash_cracker_ray_gpu2.py  hash_cracker_ray_ready.py  hash_cracker_without_ray.py  hello_gpu.py  mandelbrot-golem-cluster.yaml  mandelbrot.yaml  mandelbrot_image.py  mandelbrot_image_gpu.py  outbound.py  outbound.yaml  outbound_tester.py  outbound_tester.yaml  ray-data.py  simple-actor.py  simple-outbound-ipfs.py  simple-task.py  test.py
examples/ray-data/: Dockerfile  compose-mongo.yaml  compose-s3.yaml  ray-data.py  ray-data.yaml
examples/ray-serve-whoami/: README.md  ray-serve-20240613-1.cast  ray-serve-20240617-1.cast  ray-serve-whoami-client.py  ray-serve-whoami.py  whoami-min1worker.yaml  whoami.yaml
gcs-proxy/: gcs_proxy.py  ray_client.py  ray_server.py
gcs-proxy/src/ray/protobuf/: common_pb2.py  gcs_pb2.py  gcs_service_pb2.py  gcs_service_pb2.pyi  gcs_service_pb2_grpc.py  logging_pb2.pyi  pubsub_pb2.py  pubsub_pb2_grpc.py  runtime_env_common_pb2.py
golem_ray/: exceptions.py  local_head_command_runner.py  test_local_command_runner.py  utils.py
golem_ray.egg-info/: PKG-INFO  SOURCES.txt
golem_ray/client/: exceptions.py  golem_ray_client.py  local_head_command_runner.py  node_provider.py
golem_ray/provider/: exceptions.py  local_head_command_runner.py  node_provider.py  ssh_command_runner.py
golem_ray/server/: .env.example  config.py  exceptions.py  middlewares.py  models.py  run.py  settings.py  views.py
golem_ray/server/consts/: __init__.py  config.py  urls.py
golem_ray/server/middlewares/: __init__.py  error_handling.py
golem_ray/server/models/: models.py
golem_ray/server/routes/: golem.py
golem_ray/server/services/: __init__.py  golem.py  ray.py  ssh.py  yagna.py
golem_ray/server/services/golem/: __init__.py  golem.py  manifest.py
golem_ray/server/utils/: manifest.json  negotiation_utils.py  utils.py  yagna.py
golem_ray/server/views/: golem.py  golem_ray.py
models/: encoder.py  request.py  response.py  types.py  urls.py  validation.py
preview_tasks/: alpha-mainnet-preview-task.md  pre-alpha-2-preview-task.md  pre-alpha-preview-task-bonus.md  pre-alpha-preview-task.md
ray-client/: ray_client.py  ray_server.py
ray-client/src/ray/protobuf/: common_pb2.pyi  dependency_pb2.py  dependency_pb2.pyi  gcs_pb2.pyi  logging_pb2.py  pubsub_pb2.pyi  runtime_env_common_pb2.pyi
ray_on_golem/: __main__.py  cli.py  exceptions.py  log.py  main.py  utils.py  version.py
ray_on_golem/client/: __init__.py  client.py  exceptions.py
ray_on_golem/ctl/: __init__.py  ctl.py  log.py
ray_on_golem/network_stats/: __init__.py  main.py
ray_on_golem/network_stats/services/: __init__.py  network_stats.py
ray_on_golem/provider/: exceptions.py  log.py  node_provider.py  ssh_command_runner.py
ray_on_golem/reputation/: __init__.py  admin.py  cli.py  service.py  updater.py
ray_on_golem/reputation/migrations/models/: 1_20240311144114_seed_blacklist.py  2_20240312164006_update.py  3_20240314085535_blacklisted_until_index.py
ray_on_golem/reputation/plugins/: __init__.py  blacklist.py  score.py
ray_on_golem/server/: __init__.py  exceptions.py  main.py  middlewares.py  mixins.py  models.py  run.py  settings.py  utils.py  views.py
ray_on_golem/server/cluster/: __init__.py  cluster.py  nodes.py  sidecars.py
ray_on_golem/server/services/: __init__.py  mixins.py  new_golem.py  new_ray.py  ray.py  utils.py  yagna.py
ray_on_golem/server/services/golem/: __init__.py  golem.py  manager_stack.py  manifest.py  network_stats.py  provider_data.py  repository.py
ray_on_golem/server/services/golem/helpers/: __init__.py  demand_config.py  manager_stack.py
ray_on_golem/server/services/reputation/: __init__.py  admin.py  cli.py  ctl.py  models.py  reputation.py  service.py  updater.py
ray_on_golem/server/services/reputation/migrations/models/: 0_20240311095546_init.py  1_20240307170544_None.py  1_20240311144114_seed_blacklist.py
ray_on_golem/server/services/reputation/plugins/: __init__.py  blacklist.py  score.py
test/: test_local_command_runner.py
tests/: ray_deps_test.sh  smoke.py  webserver_logs_test.py
tests/factories/golem/resources/: base.py  demand.py  payload.py  proposal.py
tests/unit/provider/: test_node_provider.py
tests/unit/reputation/: test_plugins_blacklist.py  test_plugins_score.py
utils/: apply_overrides.py  yaml.py
